--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <section id="sobre">
         <div class="content">
-            <img src="imagens/_df3804a1-101a-498a-a6b8-1cbab8b3b51f.jpg" alt="Sua Imagem" class="rounded-image">
+            <img src="imagens/centroti.jpg" alt="Sua Imagem" class="rounded-image">
             <div class="text">
               <h1>SOBRE MIM</h1>
                 <p>Olá! Recentemente, concluí minha graduação em Tecnologia em Redes de Computadores na UNOPAR e adquiri conhecimentos em administração de redes, segurança de aplicações e suporte técnico. Também obtive certificados profissionais, incluindo o Certificado Profissional de Suporte em TI do Google e Formação em Excel VBA.</p>
