--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     
-<div id="nome"><a href="URL_da_pagina_inicial" id="nome">
+<div id="nome"><a href="https://leosport87.github.io/LeonardoAlbuquerque/" id="nome">
     &lt;LA/&gt;
 </a>
 
