--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<a id="topo"></a>
     <header>
     
 <div id="nome"><a href="https://leosport87.github.io/LeonardoAlbuquerque/" id="nome">
@@ -17,7 +18,7 @@
         <nav>
           <div id="menu-icon" onClick="toggleMenu()">&#9776;</div>
                 <div id="menu">
-                <a href="#home">Home</a>
+                <a href="#topo">Home</a>
                 <a href="#sobre">Sobre</a>
                 <a href="#experiencias">Experiências</a>
                 <a href="#projeto">Projeto</a>
@@ -50,7 +51,7 @@
 <section id="sobre">
         <div class="content">
             <img src="imagens/centroti.jpg" alt="Sua Imagem" class="rounded-image">
-            <div class="text">
+    <div class="text">
               <h1>SOBRE MIM</h1>
                 <p>Olá! Recentemente, concluí minha graduação em Tecnologia em Redes de Computadores na UNOPAR e adquiri conhecimentos em administração de redes, segurança de aplicações e suporte técnico. Também obtive certificados profissionais, incluindo o Certificado Profissional de Suporte em TI do Google e Formação em Excel VBA.</p>
                 <p>Nos últimos anos, trabalhei como frentista na MobiPE Recife, onde desenvolvi habilidades em controle de abastecimento e gestão de informações de combustível na frota de veículos. Usei o sistema GTFrota para manter registros precisos e melhorei a eficiência operacional, incluindo a redução de custos e desperdícios.</p>
