--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <!-- Segundo Projeto -->
         <div class="projeto">
             <img src="imagens/3333.png" alt="Projeto 2" width="100%" height="auto">
-          <h3>MEU PORTFOLIO/h3>
+          <h3>MEU PORTFOLIO</h3>
             <p>Desde 2019, dei um tempo no mundo do desenvolvimento web. Depois de concluir minha jornada de nove anos em meu primeiro emprego, que estava bem longe do campo de TI que sempre sonhei, tomei a decisão de voltar ao jogo. Resolvi sacudir a poeira e colocar em prática novamente o que sabia de HTML, CSS e JavaScript. Meu conhecimento ainda está no nível básico, mas fiz questão de garantir que o meu trabalho funcione bem em dispositivos móveis. Estou torcendo para que os recrutadores reconheçam o meu esforço.</p>
             <p>Tecnologias utilizadas: HTML, CSS, JavaScrip..</p>
         </div>
