--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="experiencia__lugares">
             <ul data-tab="menu">
                 <li data-target="experience1">&#128064&#128064</li>
-                <li data-target="experience2">Expecialista em abastecimento</li>
+                <li data-target="experience2">Especialista em abastecimento</li>
                 <li data-target="experience3">Auxiliar de Serviços Gerais</li>
             </ul>
         </section>
@@ -77,7 +77,7 @@
                 <p>Estou disponível para bater um papo, você pode entrar em contato via e-mail leojovem15@hotmail.com &#10024</p>
             </section>
             <section data-anime="show-right" id="experience2">
-              <h2>Expecialista em abastecimento</h2>
+              <h2>Especialista em abastecimento</h2>
                 <span>Julho 2018 - Outubro 2023</span>
               <p class="experiencia__descricao-local">Mobi Brasil</p>
                 <p>
