--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <section data-anime="show-right" id="experience1">
                 <h2>Em busca da minha primeira experiência "oficial" na área de TI :)</h2>
                 <p class="experiencia__descricao-local">Quem sabe na sua empresa?</p>
-                <p>Estou disponível para bater um papo, você pode entrar em contato via e-mail leojovem15@hotmail.com &#10024</p>
+                <p>Estou disponível para bater um papo, você pode entrar em contato via e-mail leonardodealbuquerque@hotmail.com &#10024</p>
             </section>
             <section data-anime="show-right" id="experience2">
               <h2>Especialista em abastecimento</h2>
@@ -136,7 +136,7 @@
 
 <section id="contato">
     <h2>CONTATO</h2>
-<p>Sinta-se à vontade para me enviar uma mensagem em [leojovem15@hotmail.com] e vamos iniciar uma conversa incrível!</p>
+<p>Sinta-se à vontade para me enviar uma mensagem em [leonardodealbuquerque@hotmail.com] e vamos iniciar uma conversa incrível!</p>
 </section>
 
 <footer>
